<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_puerta_puerta"
            android:icon="@drawable/ic_puerta_a_puerta"
            android:title="@string/puerta_a_puerta" />
        <item
            android:id="@+id/nav_ganancias"
            android:icon="@drawable/ic_menu_ganancias"
            android:title="@string/ganancias" />

    </group>

    <item android:title="@string/compartir">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/invitar" />
            <item
                android:id="@+id/nav_stars"
                android:icon="@drawable/ic_stars"
                android:title="@string/calificar" />
        </menu>
    </item>

</menu>
