<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/ingrese_valor_dolares"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/inp_dolar"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:hint="@string/valor_en_u_s"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_background"
        android:padding="8dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/es_primer_compra"
        android:id="@+id/es_primer_compra"
        android:layout_below="@+id/inp_dolar"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="7dp"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:text="@string/cotizacion_dolar"
        android:id="@+id/cotizacion_lab"
        android:layout_below="@+id/es_primer_compra"
        android:layout_alignStart="@+id/es_primer_compra"
        android:layout_marginTop="7dp"
        android:padding="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/valor_en_pesos"
        android:id="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/cotizacion_lab"
        android:padding="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0.00"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textAlignment="viewEnd"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:background="@color/design_fab_stroke_end_inner_color"
        android:paddingLeft="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/impuestos_en_pesos"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="7dp"
        android:padding="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0.00"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:paddingLeft="0dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textAlignment="viewEnd"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:background="@color/design_fab_stroke_end_inner_color" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="15.00"
        android:id="@+id/valor_cotizacion"
        android:textAlignment="viewEnd"
        android:layout_above="@+id/textView4"
        android:layout_alignEnd="@+id/textView5"
        android:layout_toEndOf="@+id/es_primer_compra"
        android:padding="5dp"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/total_a_pagar"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="7dp"
        android:padding="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="0.00"
        android:id="@+id/textView10"
        android:layout_alignParentStart="true"
        android:paddingLeft="0dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textAlignment="viewEnd"
        android:background="@color/design_fab_stroke_end_inner_color"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/textView6"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="$"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="$"
        android:id="@+id/textView8"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="$"
        android:id="@+id/textView11"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_alignEnd="@+id/textView8"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="$"
        android:id="@+id/textView12"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_alignTop="@+id/valor_cotizacion"
        android:layout_alignBottom="@+id/valor_cotizacion"
        android:layout_toEndOf="@+id/textView4" />

</RelativeLayout>